# toggl-track-mcp

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  jest.config.js  package.json  pyproject.toml  pytest.ini  render.yaml  tsconfig.json
.github/workflows/: deploy.yml  test.yml
scripts/: test-connection.ts  test_connection.py
src/: config.ts  index.ts  server.ts  toggl-client.ts
src/tools/: index.ts
src/types/: mcp.ts  toggl.ts
src/utils/: rate-limiter.ts
tests/: __init__.py  rate-limiter.test.ts  test___main__.py  test_rate_limiter.py  test_server.py  test_toggl_client.py
toggl_track_mcp/: __init__.py  __main__.py  rate_limiter.py  server.py  toggl_client.py
